--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
           </div>
           <div class="nav-right">
-            <a href="schedule.html"><button type="button" class="btn btn-default btn-nav">Schedule</button></a>
+            <a href="schedule.html"><button type="button" class="btn btn-default btn-nav">Edit Schedule</button></a>
             <a href="members.html"><button type="button" class="btn btn-default btn-nav">Members</button></a>
           </div>
 
@@ -69,8 +69,8 @@
     <div class="col-sm-5">
       <h4>Mock-up</h4>
       <ol>
-        <li>This is a mock-up only. Buttons, dropdowns etc do not work.</li>
-        <li>Actual app will be happier colors</li>
+        <li>This is a mock-up only. Some buttons work. Other controls such as dropdowns &amp; edit boxes do not work.</li>
+        <li>Actual app will have happier colors</li>
       </ol>
       <h4>Application</h4>
       <ol>
@@ -80,11 +80,11 @@
       </ol>
       <h4>This Screen</h4>
       <ol>
-        <li>Shows schedule for next meeting</li>
-        <li>Opens with view of schedule for the next meeting. If today is TH it will open for today. If today is any other week it will open for the date of the next TH.</li>
+        <li>Opens with view of schedule for the next meeting. If today is TH it will open for today. If today is any other date of the week it will open for the date of the next TH.</li>
         <li>If no roles have been assigned for the next meeting they will be choosen via sort on lastServedDate. Specifics detailed in the spec for Schedule UI.</li>
         <li>The schedule date cannot be changed on this screen.</li>
-        <li>Clicking <b>Schedule</b> navigates to the Schedule UI defaulted to the next TH (same rule as #2 above)</li>
+        <li>User cannot change the date of the schedule shown.</li>
+        <li>Clicking <b>Edit Schedule</b> navigates to the Schedule UI defaulted to the next TH (same rule as #1 above)</li>
         <li>Clicking <b>Members</b> navigates to the Members UI </li>
       </ol>
     </div>
