--- a/member-view.html
+++ b/member-view.html
@@ -7,8 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.ico" />
-    <link rel="stylesheet"
-      href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.0/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -18,12 +17,15 @@
       <div class="app-wrapper">
         <div class="app-nav">
           <div class="nav-left">
-            <button type="button" class="btn btn-default btn-lg btn-go-back">
-              <span class="glyphicon glyphicon-circle-arrow-left" aria-hidden="true"></span>
-            </button>
+            <a href="index.html">
+              <button type="button" class="btn btn-default btn-lg btn-go-back">
+                <i class="fas fa-arrow-alt-circle-left fa-lg"></i> Members
+              </button>
+            </a>
             <a href="index.html"><button type="button" class="btn btn-default btn-lg btn-go-back">
-              <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-            </button></a>
+              <i class="fas fa-home fa-lg"></i>
+              </button>
+            </a>
           </div>
           <div class="nav-right">
             <button type="button" class="btn btn-default btn-lg btn-go-back">
